--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -15,7 +15,7 @@ services:
       DB_CONNECTION: pgsql
       DB_HOST: postgres
       DB_PORT: 5432
-      DB_DATABASE: tasks_db
+      DB_DATABASE: task_db
       DB_USERNAME: postgres
       DB_PASSWORD: 1234
 
@@ -24,9 +24,9 @@ services:
     container_name: postgres_db
     restart: always
     environment:
-      POSTGRES_DB: tasks_db
+      POSTGRES_DB: task_db
       POSTGRES_USER: postgres
-      POSTGRES_PASSWORD: postgres
+      POSTGRES_PASSWORD: 1234
     ports:
       - "5432:5432"
     volumes:
